# moqtap

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile  moqtap-js.md  test-vectors.md
crates/moqtap-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/moqtap-cli/examples/: encode_decode.rs  session_state.rs
crates/moqtap-cli/src/: main.rs
crates/moqtap-client/: CHANGELOG.md  Cargo.toml  README.md  client-todo.md
crates/moqtap-client/src/: connection.rs  dispatch.rs  endpoint.rs  event.rs  lib.rs  namespace.rs  observer.rs  track_status.rs
crates/moqtap-client/src/draft07/: connection.rs  endpoint.rs  event.rs  fetch.rs  mod.rs  namespace.rs  observer.rs  subscription.rs  track_status.rs
crates/moqtap-client/src/draft07/session/: mod.rs  setup.rs  subscribe_id.rs
crates/moqtap-client/src/draft08/: connection.rs  endpoint.rs  event.rs  fetch.rs  mod.rs  namespace.rs  observer.rs  subscription.rs  track_status.rs
crates/moqtap-client/src/draft08/session/: mod.rs  setup.rs  subscribe_id.rs
crates/moqtap-client/src/draft09/: connection.rs  endpoint.rs  event.rs  fetch.rs  mod.rs  namespace.rs  observer.rs  subscription.rs  track_status.rs
crates/moqtap-client/src/draft09/session/: mod.rs  setup.rs  subscribe_id.rs
crates/moqtap-client/src/draft10/: connection.rs  endpoint.rs  event.rs  fetch.rs  mod.rs  observer.rs
crates/moqtap-client/src/draft10/session/: mod.rs  setup.rs  subscribe_id.rs
crates/moqtap-client/src/draft11/: connection.rs  endpoint.rs  event.rs  mod.rs  namespace.rs  observer.rs  subscription.rs  track_status.rs
crates/moqtap-client/src/draft11/session/: mod.rs  request_id.rs  setup.rs
crates/moqtap-client/src/draft12/: connection.rs  endpoint.rs  event.rs  mod.rs  observer.rs  subscription.rs
crates/moqtap-client/src/draft12/session/: mod.rs  request_id.rs  setup.rs
crates/moqtap-client/src/draft13/: connection.rs  endpoint.rs  event.rs  fetch.rs  mod.rs  namespace.rs  observer.rs  track_status.rs
crates/moqtap-client/src/draft13/session/: setup.rs  state.rs
crates/moqtap-client/src/draft14/: connection.rs  endpoint.rs  event.rs  fetch.rs  mod.rs  observer.rs  publish.rs  subscription.rs
crates/moqtap-client/src/draft14/session/: mod.rs
crates/moqtap-client/src/draft15/: connection.rs  endpoint.rs  event.rs  fetch.rs  mod.rs  observer.rs  publish.rs
crates/moqtap-client/src/draft15/session/: mod.rs  request_id.rs  setup.rs
crates/moqtap-client/src/draft16/: connection.rs  endpoint.rs  event.rs  mod.rs  observer.rs
crates/moqtap-client/src/draft16/session/: setup.rs
crates/moqtap-client/src/draft17/: connection.rs  endpoint.rs  event.rs  mod.rs  observer.rs  subscription.rs
crates/moqtap-client/src/draft18/: connection.rs  endpoint.rs  event.rs  mod.rs  namespace.rs  observer.rs  track_status.rs
crates/moqtap-client/src/session/: setup.rs
crates/moqtap-client/src/transport/: mod.rs  quic.rs  webtransport.rs
crates/moqtap-client/tests/: draft07_endpoint_tests.rs  draft08_endpoint_tests.rs  draft09_endpoint_tests.rs  draft10_endpoint_tests.rs  draft11_endpoint_tests.rs  draft12_endpoint_tests.rs  draft13_endpoint_tests.rs  draft14_endpoint_tests.rs  draft15_endpoint_tests.rs  draft16_endpoint_tests.rs  draft17_endpoint_tests.rs  endpoint_tests.rs  event_tests.rs  fake_relay_errors.rs  fetch_tests.rs  loopback_setup.rs  loopback_streams.rs  namespace_tests.rs  publish_tests.rs  request_id_tests.rs  setup_tests.rs  state_tests.rs  subscription_tests.rs  track_status_tests.rs  transport_tests.rs
crates/moqtap-client/tests/common/: mod.rs
crates/moqtap-codec/: CHANGELOG.md  Cargo.toml  README.md
crates/moqtap-codec/benches/: codec.rs
crates/moqtap-codec/src/: dispatch.rs  error.rs  kvp.rs  lib.rs  types.rs  varint.rs  version.rs
crates/moqtap-codec/src/draft07/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft08/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft09/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft10/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft11/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft12/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft13/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft14/: data_stream.rs  error_codes.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft15/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft16/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft17/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/src/draft18/: data_stream.rs  message.rs  mod.rs  types.rs
crates/moqtap-codec/tests/: dispatch_tests.rs  kvp_tests.rs  lenient_parsing_tests.rs  tuple_tests.rs  varint_tests.rs  vectors_draft07.rs  vectors_draft08.rs  vectors_draft09.rs  vectors_draft10.rs  vectors_draft11.rs  vectors_draft12.rs  vectors_draft13.rs  vectors_draft14.rs  vectors_draft15.rs  vectors_draft16.rs  vectors_draft17.rs  vectors_draft18.rs  vectors_varint.rs
crates/moqtap-codec/tests/test_vectors/: draft07_json.rs  draft08_json.rs  draft09_json.rs  draft10_json.rs  draft11_json.rs  draft12_json.rs  draft13_json.rs  draft14_json.rs  draft15_json.rs  draft16_json.rs  draft17_json.rs  draft18_json.rs  mod.rs  params.rs
crates/moqtap-proxy/: CHANGELOG.md  Cargo.toml  README.md
crates/moqtap-proxy/src/: cert.rs  error.rs  event.rs  hook.rs  lib.rs  listener.rs  observer.rs  proxy.rs  session.rs
crates/moqtap-proxy/src/parser/: control.rs  data.rs  mod.rs
crates/moqtap-proxy/tests/: cert_tests.rs  event_tests.rs  hook_tests.rs  listener_tests.rs  parser_tests.rs  proxy_forward.rs  proxy_hook_rewrite.rs
crates/moqtap-proxy/tests/common/: mod.rs
crates/moqtap-trace/: CHANGELOG.md  Cargo.toml  README.md
crates/moqtap-trace/src/: error.rs  event.rs  header.rs  lib.rs  reader.rs  writer.rs
crates/moqtap-trace/tests/: event_tests.rs  moqtrace_tests.rs
(+10 files in other folders)
