[package]
name = "moqtap-codec"
description = "MoQT (Media over QUIC Transport) wire codec — draft-07 and draft-14 message encoding/decoding"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["moqt", "codec", "quic", "media-streaming", "wire-format"]
categories.workspace = true
readme = "README.md"
exclude = ["test-vectors/", "tests/"]

[features]
default = ["draft14"]
draft07 = []
draft14 = []

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
